[package]
name = "hcskr"
version = "0.1.1"
authors = ["Beta5051 <beta5051@gmail.com>"]
description = "rust 언어 교육청 자가진단 라이브러리"
repository = "https://github.com/Beta5051/hcskr"
license = "MIT"
keywords = ["hcs", "self-check"]
categories = ["api-bindings", "network-programming"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking", "json"]}
serde = { version = "1.0.117", features = ["derive"]}
serde_json = "1.0.59"
openssl = { version = "0.10", features = ["vendored"] }
base64 = "0.13.0"